loopdowhile.Poucet1.scala.error
Erreur de compilation :
Poucet1:10: error: ';' expected but 'else' found.
    else{
    ^