loopdowhile.Poucet1.scala.code
var cpt = 0
while(!estSurJaune){
  for (i <- 1 to 5){
    avance();
    if (estSurBiscuit()){
      cpt+=1
    }
  if (cpt >= 3){
    gauche();
    else{
       droite();
     }
   }
   cpt=0
  }
}